--- a/japan/sonicr/r/course.html
+++ b/japan/sonicr/r/course.html
@@ -12,7 +12,7 @@
 <tr>
 <td bgcolor="blue" valign="bottom" width="500" align="right">
 <font color="white"><b>
-ＳＯＮＩＣ－Ｒ　コースイメージ
+Sonic R course images
 </b></font>
 </td>
 </tr>
@@ -28,11 +28,11 @@
 Resort Island</b><br>
 </font>
 <font size=+1><b>
-リゾート アイランド
+Resort Island
 </b></font>
 <hr>
         <a href="image/course1.jpg"> <img border="0" src="../../sonicjam/gif/sankaku0.gif" width="16" height="16" align="top"> 
-        <font size=2>もうすこし大きくして見る</font></a> </td>
+        <font size=2>I'll make it a little bigger.</font></a> </td>
 
 <td>
 歴代ソニックシリーズの最初のゾーン、自然いっぱいの南の島をモチーフにしたコースです。<br>
