--- a/japan/sonicr/r/rstory.html
+++ b/japan/sonicr/r/rstory.html
@@ -22,44 +22,44 @@ Sonic R Story　
 <table border="0" width="500" cellpadding="8">
 <tr>
 <td bgcolor="white">
- 再三に渡るDr.エッグマンとの死闘のあと、ソニックと、彼を慕っているテイルスは、一緒に冒険の旅を続けています。<br>
-その旅の途中、２人はビルの巨大スクリーンに表示された『ワールドグランプリ  出場選手大募集！！』のコマーシャルを目にします。<p>
-「ソニック、ソニック！『世界一速い奴を決めるレース大会』だって！」<br>
- テイルスは興味しんしんです。<br>
-「ねぇソニック、出場してみようよ。ソニックなら優勝間違いなしだよ！ 僕も自分の力を試してみたいんだ。」<br>
-｢レースかぁ…、あんまり興味ないなぁ。｣<br>
-ソニックはあんまり乗り気ではありません。<p>
-その場を立ち去ろうとしたその瞬車、彼は切り替わった画面に目が釘付けになりました。<br>
-そして、「テイルス、出場するよ！」 そう告げるが早いか、ソニックは駆け出します。<br>
-「待ってよ、ソニック！」テイルスは慌てて後を追います。<p>
- ソニックの目を釘付けにした画面には『出場予定選手リスト：Dr.エッグマン』とあったのです。<br>
+ After a recurring battle to the death with Dr. Robotnik, Sonic and Tails (who adores him) continue their adventurous journey together.<br>
+During their journey, they see a commercial on the giant screen of a building that says "Calling all contestants for the World Grand Prix!".<p>
+"Sonic, Sonic! It's a race to see who's the fastest in the world!"<br>
+ Tails was very interested.<br>
+"Hey, Sonic, let's enter the competition. You're going to win! I want to see what you're made of."<br>
+"Racing...not really interested."<br>
+Sonic wasn't too keen on the idea.<p>
+Just as he was about to leave, his eyes were glued to the switching screen.<br>
+Then, suddenly, "Tails, I'm in!". As soon as he announces this, Sonic runs off.<br>
+"Wait, Sonic!". Tails hurried after him.<p>
+ Sonic's eyes were glued to the screen which read: "List of Scheduled Players: Dr. Robotnik".<br>
 </td>
 </tr>
 <tr>
 <td bgcolor="white">
-全世界に放映されたこの映像を目にしたのは、ソニックだけではありません。<br>
-レース開催の知らせは、ソニックの良きライバルでもあるナックルズ、そしてソニックに恋する少女エミーのもとへも届いていたのです。<p>
-「ソニック、このワールドグランプリでお前との真の決着をつけてやるぜ！」<br>
-「ソニックさまは、きっとこのレースに出場されるはず。待っててくださいね、ソニックさまぁ～！」<br>
+Sonic wasn't the only one who saw this video that was broadcast around the world.<br>
+The news of the race had reached Knuckles, Sonic's good rival, and Amy, the girl in love with Sonic.<p>
+"Sonic, this World Grand Prix is where I'm going to settle a score with you!"<br>
+"I'm sure Sonic will be participating in this race. Please wait for, Sonic!"<br>
 </td>
 </tr>
 <tr>
 <td bgcolor="white">
- その様子をスパイ衛星を使って、一部始終偵察していた人がいました。<br>
-彼の名はDr.エッグマン。これまで何度もソニックに戦いを挑んできた悪の超天才科学者です。<p>
-「ダーーーーーーーハッハッハ……、ソニックめ、まんまと罠に引っ掛かりおった。<br>
-このレースの開催地のどこかにカオスエメラルドが眠っているのはすでに調査ずみ。<br>
-ソニック達がレース中にカオスエメラルドを偶然発見してくれれば探す手間がはぶけるわい。まとめて奪い取ってくれる。<br>
-いくらソニックとはいえ、レース中の隙をついて攻撃すればひとたまりもあるまい、それにこの秘密兵器もあることだしな……」<br>
-と言いながら振り向くDr.エッグマン。<br>
-その視線の先には薄暗い闇のなか、不気味に目を光らせる数体の人影が並んでいました。<p>
-「ダーーーーーーーハッハッハ……われながら完璧な作戦だ……ついに、ついにわしの長年の夢、世界征服を達成するときが来たのだ……ダーーーーーーーハッハッハ……」<br>
+ Someone had been scouting the whole thing using a spy satellite.<br>
+His name is Dr. Robotnik. He is an evil super-genius scientist who has challenged Sonic to battle many times before.<p>
+"Hahhhhh... Sonic, you've fallen right into the trap."<br>
+"I've already investigated the fact that the Chaos Emeralds are lying somewhere in the area where these races are held."<br>
+"If Sonic and his friends happen to find the Chaos Emeralds during the race, they won't have to search for them. They'll take it all away at once."<br>
+Dr. Robotnik turns around and says: "Even if Sonic is in the middle of a race, if you attack him while he's in the middle of a race,<br>
+you'll be in trouble..."<br>
+As I looked at them, I saw a line of several figured in the dim darkness, their eyes glowing eerily.<p>
+"Hahhhh... I believe I have the perfect plan... At last, the time has come for me to achieve my long-held dream of world domination... Hahhhhhhahahaha..."<br>
 </td>
 </tr>
 <tr>
 <td bgcolor="white">
- 果たしてソニックはDr.エッグマンの野望を阻止できるでしょうか？そしてワールドグランプリの行方は？ <p>
-さぁ、いよいよワールドグランプリの開幕です！<br>
+ Will Sonic be able to stop Dr. Robotnik's ambitions? And where will the World Grand Prix go?<p>
+Now, it's time for the World Grand Prix to begin!<br>
           <IMG BORDER="0" SRC="image/stback.jpg" ALIGN="right" WIDTH="300" HEIGHT="225"> 
       </td>
 </tr>
