--- a/sonichq/main/frames/menu1.htm
+++ b/sonichq/main/frames/menu1.htm
@@ -20,12 +20,12 @@
 <AREA SHAPE=RECT COORDS="184,82,253,94" HREF=main/nostalgia/ target="main"></AREA>
 
 <AREA SHAPE=RECT COORDS="370,84,421,95" HREF=fanfair/ target="main"></AREA>
-<AREA SHAPE=RECT COORDS="371,71,421,82" HREF=https://web.archive.org/20011101000000/http://pub12.ezboard.com/bsonichqcommunity target="main"></AREA>
+<AREA SHAPE=RECT COORDS="371,71,421,82" HREF=https://web.archive.org/20011210000000/http://pub12.ezboard.com/bsonichqcommunity target="main"></AREA>
 <AREA SHAPE=RECT COORDS="370,58,438,70" HREF=images/ target="index2"></AREA>
 <AREA SHAPE=RECT COORDS="371,45,430,58" HREF=dir/ target="main"></AREA>
-<AREA SHAPE=RECT COORDS="371,32,424,43" HREF=features/index.htm target="main"></AREA>
+<AREA SHAPE=RECT COORDS="371,32,424,43" HREF=features/ target="main"></AREA>
 <AREA SHAPE=RECT COORDS="371,20,433,30" HREF=qa/ target="main"></AREA>
-<AREA SHAPE=RECT COORDS="370,4,456,17" HREF=https://web.archive.org/20011101000000/http://pub12.ezboard.com/bsonichqcommunity target="main"></AREA>
+<AREA SHAPE=RECT COORDS="370,4,456,17" HREF=https://web.archive.org/20011210000000/http://pub12.ezboard.com/bsonichqcommunity target="main"></AREA>
 
 <AREA SHAPE=RECT COORDS="290,84,357,95" HREF=store/sonicstore.htm target="main"></AREA>
 <AREA SHAPE=RECT COORDS="289,70,356,83" HREF=fanfair/fan-fic/ target="main"></AREA>
