--- a/japan/sonicr/index.html
+++ b/japan/sonicr/index.html
@@ -11,96 +11,92 @@ sonic r
 <table border="0">
 <tr>
 <td>
-　タイトル　
+　Title
 </td>
 <td>
-ＳＯＮＩＣ　Ｒ
-</td>
-</tr>
-
-<tr>
-<td>
-　ジャンル　
-</td>
-<td>
-レーシングアクション
+Sonic R
 </td>
 </tr>
 
 <tr>
 <td>
-　ハード　
+　Genre
 </td>
 <td>
-セガサターン及びその互換機
+Racing, Action
+</td>
 </tr>
 
 <tr>
 <td>
-　発売日　
+　Platform
 </td>
 <td>
-1997年12月4日</td>
+Sega Saturn and compatible devices
+</tr>
+
+<tr>
+<td>
+　Release date
+</td>
+<td>
+December 4th, 1997 (JP)</td>
 </tr>
 
 <tr>
 <td valign="top">
-　対応周辺機器予定　
+　Supported peripherals
 </td>
 <td valign="top">
-コントロールパッド<br>
-セガマルチコントローラー<br>
-パワーメモリー
+Control Pad<br>
+Sega Multi-Controller<br>
+Power Memory
 </td>
 </tr>
 </table>
 
 
 <hr size="4" width="320">
-<a href="r/rstory.html" target="_top"><font size="2"><strong>&lt;&lt; ストーリー &gt;&gt;</strong></font></a><br>
+<a href="r/rstory.html" target="_top"><font size="2"><strong>&lt;&lt; Story&gt;&gt;</strong></font></a><br>
 <br>
 <table width="500"><td bgcolor="red" align="left"><font color="white">
-<b>　ゲームの特徴　</b></font>
+<b>　Game Features　</b></font>
 </td>
 </table>
 <br>
 <table width="500">
 <tr>
-      <td> ● <font color="red"><b><a href="r/rchara.html">ソニックをはじめとしたソニックファミリーが登場</a></b></font><b>するアクションレース</b> 
+      <td> ● <font color="red"><b><a href="r/rchara.html">An action-packed race featuring Sonic</a></b></font><b>and others!</b> 
       </td>
 </tr>
 <tr>
 <td>
-このゲームでは、ソニックをはじめとしたソニックファミリーキャラクターが登場します。　<br>
-ソニックの『スピンダッシュ』や、マイルスの『飛行』など、ソニックに登場したキャラクターはおなじみの特殊能力を持っており、
-プレイヤーは各キャラクターの特殊能力をうまく使ってレースに挑みます。<br>
-更に、プレイ可能な隠しキャラクターも存在してキャラクター毎の攻略に奥深さが増します。
+In this game, Sonic and other Sonic characters appear.<br>
+Sonic's Spin Dash, Tails' Flight, and other Sonic characters have special abilities that we're all familiar with.
+The player must use those abilities from each character to finish the race.<br>
+Furthermore, there are hidden characters that can be played as, adding depth to the strategy of each character.
 </td>
 </tr>
 <tr>
-      <td> ● <font color="red"><b><a href="r/course.html">多数の分岐ルートがあるコースレイアウト</a></b></font><b>、自由にフィールドを駆け抜ける爽快感</b> 
+      <td> ● <font color="red"><b><a href="r/course.html">Course layout with many branching routes</a></b></font><b>, the exhilaration os running through the field freely</b> 
       </td>
 </tr>
 <tr>
 <td>
-コースは道に沿ったルートだけではありません。途中には、様々な分岐ルートがプレイヤーを待ち受けてあり、プレイヤーはただ道に
-沿ってレースするだけでなく、フィールドの中を自由に走り回れる爽快感を得ることができます。<br>
-さらに、フィールドには各キャラクターの特性を活かした仕掛けやルートがありますので、プレイヤーはキャラクター毎のコースの攻
-略、分岐ルートを全て見つけるといった楽しみがあります。
+The course is not just a route along the road. There are various branching routes that await the player along the way. In addition to racing along the road, players can also enjoy the exhilaration of running around freely in the field.<br>
+In addition, the field has tricks and routes that take advantage of the characteristics of each character, so players can have fun attack each course and finding all the branching routes.
 </td>
 </tr>
 
 <tr>
-      <td> ● <font color="red"><b><a href="r/screen.html">コース上に存在する様々な仕掛け</a></b></font><b>と豊富な遊び</b> 
+      <td> ● <font color="red"><b><a href="r/screen.html">A variety of fricks and </a></b></font><b>plenty of fun on the course</b> 
       </td>
 </tr>
 
 <tr>
 <td>
-コース上にはおなじみのループや、リングを集めないと通れないルートなど様々な仕掛けが存在するなど、ただ走るだけのレースとは
-全く違う、初めての「レーシングアクション」が実現しました。<br>
-さらに、コース上には、スーパーエメラルドや隠しキャラクターも隠されており、プレイヤーはそれらを発見して集める楽しみも存在
-します。
+There are various tricks on the course, such as familiar loops and routes that can only be taken by collecting rings. This is the first action-racing game that is like this.<br>
+In addition, Chaos Emeralds and hidden characters are hidden in the course, and players will have fun discovering and collecting them.
 </td>
 </tr>
 </table>
