--- a/sonichq/main/menu/top4.htm
+++ b/sonichq/main/menu/top4.htm
@@ -57,7 +57,7 @@ function MM_swapImage() { //v2.0
         </tr>
         <tr> 
           <td><a href="/sonichq/games/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.sonichq','document.sonichq','games_desc.gif','document.games','document.games','games_on.gif','#955437334550')" target="index2"><img src="games.gif" width="128" height="12" name="games" border="0"></a></td>
-          <td><a href="/sonichq/features/index.htm" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.sonichq','document.sonichq','features_desc.gif','document.features','document.features','features_on.gif','#955437469280')" target="index2"><img src="features.gif" width="128" height="12" name="features" border="0"></a></td>
+          <td><a href="/sonichq/features/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.sonichq','document.sonichq','features_desc.gif','document.features','document.features','features_on.gif','#955437469280')" target="index2"><img src="features.gif" width="128" height="12" name="features" border="0"></a></td>
         </tr>
         <tr> 
           <td><a href="/sonichq/comics/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.sonichq','document.sonichq','comics_desc.gif','document.comics','document.comics','comics_on.gif','#955437357290')" target="index2"><img src="comics.gif" width="128" height="12" name="comics" border="0"></a></td>
@@ -65,7 +65,7 @@ function MM_swapImage() { //v2.0
         </tr>
         <tr> 
           <td><a href="/sonichq/cartoon/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.sonichq','document.sonichq','animation_desc.gif','document.animation','document.animation','animation_on.gif','#955437375910')" target="index2"><img src="animation.gif" width="128" height="12" name="animation" border="0"></a></td>
-          <td><a href="https://web.archive.org/20011113000000/http://pub12.ezboard.com/bsonichqcommunity" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.sonichq','document.sonichq','community_desc.gif','document.community','document.community','community_on.gif','#955437504820')" target="index2"><img src="community.gif" width="128" height="12" name="community" border="0"></a></td>
+          <td><a href="https://web.archive.org/20011210000000/http://pub12.ezboard.com/bsonichqcommunity" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.sonichq','document.sonichq','community_desc.gif','document.community','document.community','community_on.gif','#955437504820')" target="index2"><img src="community.gif" width="128" height="12" name="community" border="0"></a></td>
         </tr>
         <tr> 
           <td><a href="/sonichq/music/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.sonichq','document.sonichq','music_desc.gif','document.music','document.music','music_on.gif','#955437392390')" target="index2"><img src="music.gif" width="128" height="12" name="music" border="0"></a></td>
