--- a/sonichq/megaman/fanfair/fancomics/index.html
+++ b/sonichq/megaman/fanfair/fancomics/index.html
@@ -34,10 +34,10 @@ document.write('<link rel=stylesheet href=/sonichq/megaman/css/' + theme + '.css
 <td bgcolor=black width=100% height=50>
 <script language=JavaScript>
 <!--
-document.write(titlepic + titlelogo)
+document.write(titlepic)
 //-->
 </script>
-&nbsp;</td>
+<img src=/sonichq/fanfair/topbar-title.gif align=right></td>
 
 <td width=19><img src=/sonichq/topright.gif width=19></td></tr>
 </table>
